layout issues

--- a/src/home/home.scss
+++ b/src/home/home.scss
@@ -61,3 +61,10 @@ div.story-prefix {
     }
 }
 
+span.marg-right {
+    margin-right: calc(50vw - 585px);
+}
+
+span.marg-left {
+    margin-left: calc(50vw - 585px);
+}
